Fixed the navigation so that the image isn't in the collapse toggle.

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
     margin: 0;
     text-align: center;
 }
+.top {
+    padding-top: 60px;
+}
 h1 {
     padding: 5px;
     font-size: 40px;
@@ -63,5 +66,14 @@ label {
 .navbar-nav {
     font-family: sans-serif;
     padding-top: 65px;
-    padding-bottom: 65px;
+}
+.navbar {
+    border: none;
+}
+.navbar-collapse {
+    border: none;
+}
+.navbar-header  {
+    height: 200px;
+    width: 100%;
 }
